Fix player nav buttons display on small viewports

--- a/assets/app/components/player.scss
+++ b/assets/app/components/player.scss
@@ -49,7 +49,7 @@
       float: left;
       height: 50px;
       padding: 0;
-      width: 50%;
+      width: 33.33%;
 
       @media (min-width: $tablet) {
         background-color: transparent;
